--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,8 +14,7 @@
 @import "base/mixins";
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: $background;
 }
 
@@ -31,4 +30,9 @@ html {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+}
+
+.toolbar {
+  width: 100%;
+  height: 80px;
 }
